# digital-content-manager

./: .editorconfig  .eslintrc.json  .gitignore  .npmrc  .prettierrc  Dockerfile.dev  FIELDTYPES.md  README.md  ct.ts  docker-compose.yml  github-labels.json  index.tsx  logo.ai  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env  Cargo.toml  Dockerfile
apps/api/migrations/2023-06-14-070025_create_users/: up.sql
apps/api/migrations/2023-06-19-152314_create_sites/: up.sql
apps/api/migrations/2023-06-19-152314_create_teams/: down.sql
apps/api/migrations/2023-06-19-152446_create_roles/: up.sql
apps/api/migrations/2023-06-19-152447_create_sites_users/: down.sql  up.sql
apps/api/migrations/2023-06-19-152447_create_teams_users/: down.sql
apps/api/migrations/2023-06-19-152448_create_sites_users_roles/: down.sql  up.sql
apps/api/migrations/2023-06-21-142823_create_iam_policies/: up.sql
apps/api/migrations/2023-06-21-142922_create_sites_users_iam_policies/: down.sql  up.sql
apps/api/migrations/2023-06-21-142922_create_users_roles/: up.sql
apps/api/migrations/2023-06-21-142956_create_roles_iam_policies/: down.sql  up.sql
apps/api/migrations/2023-06-21-143057_create_permissions/: up.sql
apps/api/migrations/2023-06-21-143131_create_iam_conditions/: up.sql
apps/api/migrations/2023-06-21-143134_create_iam_actions/: down.sql  up.sql
apps/api/migrations/2023-06-21-143249_create_permissions_iam_conditions/: down.sql  up.sql
apps/api/migrations/2023-06-21-143253_create_permissions_iam_actions/: up.sql
apps/api/migrations/2023-07-14-172949_create_content_types/: down.sql  up.sql
apps/api/migrations/2023-07-14-173036_create_fields/: down.sql  up.sql
apps/api/migrations/2023-07-14-173045_create_content_components/: down.sql  up.sql
apps/api/migrations/2023-07-14-173456_field_config/: down.sql  up.sql
apps/api/migrations/2023-07-14-175421_create_sites_content_types/: down.sql  up.sql
apps/api/migrations/2023-07-15-134412_create_languages/: down.sql  up.sql
apps/api/src/: constants.rs  errors.rs  main.rs  openapi.rs  routes.rs  schema.rs
apps/api/src/modules/: mod.rs
(+1134 files in other folders)
