[package]
name = "ibs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["r2d2", "postgres", "chrono", "uuid", "serde_json"] }
dotenv = { version = "0.15" }
actix-web = { version = "4.3" }
actix-cors = { version = "0.6.4" }
jsonwebtoken = { version = "8.3" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
bcrypt = { version = "0.14.0" }
thiserror = { version = "1.0.40" }
serde_json = { version = "1.0.96" }
serde = { version = "1.0.164", features = ["derive"] }
futures = { version = "0.3.28" }
utoipa = { version = "3.3.0", features = ["actix_extras", "uuid", "chrono", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
regex = { version = "1.8.4" }
slug = "0.1.4"
lazy_static = { version = "1.4.0" }
diesel_migrations = { version = "2.1.0" }
oauth2 = { version = "4.4.1" }
reqwest = { version = "0.11.18" }
pluralizer = { version = "0.4.0" }
rand = { version = "0.8.5" }
opentelemetry = { version = "0.19.0", features = ["rt-tokio-current-thread"] }
tracing = { version = "0.1.37" }
tracing-opentelemetry = { version = "0.19.0" }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-actix-web = { version = "0.7.5", features = ["opentelemetry_0_19"]}
tracing-bunyan-formatter = "0.3.7"
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.12.0" }
aws-sdk-s3 = "0.28.0"
actix-multipart = "0.6.0"
aws-config = { version = "0.55.3" }
aws-credential-types = { version = "0.55.3", features = ["hardcoded-credentials"] }
tokio = { version = "1.29.1", features = ["io-util", "fs"] }
mime_guess = "2.0.4"
itertools = "0.11.0"
json-patch = { version = "1.0.0" }
async-trait = "0.1.73"

# [dev-dependencies]
# rusty-hook = "0.11.2"

[profile.release]
opt-level = 'z' # Optimize for size
